@@ -113,7 +113,16 @@ null_array(NODE *symbol)
 	symbol->table_size = symbol->array_size = 0;
 	symbol->array_capacity = 0;
 	symbol->flags = 0;
-	assert(symbol->xarray == NULL);
+	/*
+	 * 5/2013: This used to be
+	 *
+	 * 	assert(symbol->xarray == NULL);
+	 *
+	 * But that seems to cause problems for no good reason
+	 * that I can see. I believe it to be an artifact of the
+	 * union getting in the way.
+	 */
+	symbol->xarray = NULL;
 	/* vname, parent_array not (re)initialized */
 }
 
