@@ -8,6 +8,11 @@
 	* configure.ac (AC_STRUCT_ST_BLKSIZE): Replaced with call to
 	AC_CHECK_MEMBERS.
 
+	Unrelated:
+
+	* array.c (null_array): Remove the assert and just clear
+	symbol->xarray.
+
 2013-05-26         Arnold D. Robbins     <arnold@skeeve.com>
 
 	* getopt.c: For Mac OS X, also include <stdlib.h> to avoid
